[gd_scene load_steps=4 format=2]

[ext_resource path="res://Figur.gd" type="Script" id=1]
[ext_resource path="res://Figurs/RedLight.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40, 40 )

[node name="Figur" type="Area2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="FigurSprite" type="Sprite" parent="."]
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 40, 40 )
shape = SubResource( 1 )

[node name="RedLight" type="ColorRect" parent="."]
visible = false
margin_right = 80.0
margin_bottom = 80.0
color = Color( 0.615686, 0.176471, 0.176471, 0.352941 )
script = ExtResource( 2 )
[connection signal="input_event" from="." to="." method="_on_Figur_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Figur_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Figur_mouse_exited"]
